--- a/src/main/webapp/lib/fade-slider/slider.css
+++ b/src/main/webapp/lib/fade-slider/slider.css
@@ -677,6 +677,16 @@
 }
 
 @media screen and (max-width: 640px) {
+    .fade-in-slider .slick-arrow {
+    position: absolute;
+    bottom: -9px;
+    width: 77px;
+    height: 51px;
+    display: inline-block !important;
+    text-indent: -999px;
+    cursor: pointer;
+    z-index: 11111111;
+}
     .text-slider .section-title {
         font-size: 32px;
     }
@@ -706,24 +716,30 @@
         margin-top: 10px;
     }
     section.fade-in-slider .swiper-slide .text h2 {
-        font-size: 28px;
+        font-size: 25px;
+        line-height: 1.2;
+        padding-top: 5px;
     }
     .fade-in-slider .swiper-slide .text p {
-        font-size: 15px;
+        font-size: 14px;
+        line-height: 1.5;
+        margin-top: -6px;
     }
     .fade-in-slider .title h2 {
         font-size: 31px;
-        padding: 0 30px;
+        padding: 0 15px;
         box-sizing: border-box;
         line-height: 1.3;
         word-break: keep-all;
     }
     .fade-in-slider .title p {
         font-size: 15px;
-        padding: 0 30px;
+        padding: 0 15px;
         box-sizing: border-box;
         line-height: 1.7;
         word-break: keep-all;
+        margin-top: -15px;
+        margin-bottom: 26px;
     }
 }
 
@@ -814,7 +830,7 @@
         height: 500px;
     }
     .fade-in-slider .scroll-bar {
-        top: 303px;
+        top: 266px;
     }
     section.fade-in-slider .swiper-slide .text {
         padding-top: 200px;
@@ -823,7 +839,7 @@
         height: 159px;
     }
     .fade-in-slider .title h2 {
-        font-size: 25px;
+        font-size: 28px;
     }
     body .post-slider .posts .slide, .left-fade-slider-container .img  {
         height: 164px;
