--- a/src/main/webapp/css/info/directions.css
+++ b/src/main/webapp/css/info/directions.css
@@ -65,13 +65,18 @@
     height: 613px;
 }
 
+.section03 .background {
+    background: url(../../images/sub/info/directions/location_bg.jpg) center top no-repeat fixed;
+}
+
 .section03 .bg {
     width: 100%;
     height: 100%;
-    background: url(../../images/sub/info/directions/location_bg.jpg) center top no-repeat fixed;
     padding-top: 93px;
     box-sizing: border-box;
     text-align: center;
+    z-index: 1000000000;
+    position: relative;
 }
 
 .section03 .bg h2 {
@@ -249,41 +254,41 @@ li:before {
         font-size: 14px;
     }
     .section01 {
-    margin-top: 41px;
-}
+        margin-top: 41px;
+    }
 
-.section02 {
-    background: #f5f5f5;
-    padding-bottom: 53px;
-    padding-top: 60px;
+    .section02 {
+        background: #f5f5f5;
+        padding-bottom: 53px;
+        padding-top: 60px;
     }
 
     .section03 .bg h2 {
-    font-size: 28px;
-}
+        font-size: 28px;
+    }
 
 
-.section03 .bg {
-    padding-bottom: 62px;
-    padding-top: 71px;
-}
+    .section03 .bg {
+        padding-bottom: 62px;
+        padding-top: 71px;
+    }
 
 
-.section04 {
-    padding-top: 59px;
-    padding-bottom: 52px;
-}
+    .section04 {
+        padding-top: 59px;
+        padding-bottom: 52px;
+    }
 
-.section04 li h2 {
-    font-size: 24px;
-    font-weight: 500;
-    margin-bottom: 17px;
-    letter-spacing: -2px;
-}
-.section03 {
-    width: 100%;
-    height: 378px;
-}
+    .section04 li h2 {
+        font-size: 24px;
+        font-weight: 500;
+        margin-bottom: 17px;
+        letter-spacing: -2px;
+    }
+    .section03 {
+        width: 100%;
+        height: 378px;
+    }
 
 }
 
