--- a/src/main/webapp/css/info/intro.css
+++ b/src/main/webapp/css/info/intro.css
@@ -491,6 +491,7 @@ section {
         padding-right: 30px;
         word-break: keep-all;
         margin-top: 1px;
+        line-height: 1.5;
     }
     .section06 .section-title {
         word-break: keep-all;
@@ -562,7 +563,7 @@ section {
     .section02 .text-box h2 + p, .section04 .text-box h2 + p {
         width: 100%;
         margin-top: 0px;
-        margin-bottom: 19px;
+        margin-bottom: 23px;
     }
     .section03 .text-box {
         padding-left: 0;
@@ -570,8 +571,18 @@ section {
 }
 
 @media screen and (max-width:640px) {
+
+    .section06 .text > div:first-child h2 {
+    padding-top: 20px;
+}
+
+
+    .section06 .text > div.img_bg {
+     margin-top: 45px;
+     }
+
     .section06 {
-        margin-top: 31px;
+        margin-top: 33px;
     }
 
     .section03{
@@ -591,8 +602,9 @@ section {
         padding-bottom: 73px;
     }
     .last-text {
-        margin-top: 384px;
+        margin-top: 315px;
         padding-left: 30px;
+        padding-bottom: 44px;
     }
     .section06 .text > div.img_bg {
         position: absolute;
@@ -690,19 +702,19 @@ section {
 
 @media screen and (max-width:414px) {
     .section06 .text > div {
-        margin-top: 110px;
+        /* margin-top: 154px; */
     }
     .section03 .img01,
     .section04 .img01 {
-        height: 155px;
+        height: 225px;
     }
     .section02 .text-box,
     .section03 .text-box,
     .section04 .text-box {
-        padding-top: 180px;
+        padding-top: 260px;
     }
     .section02 .img01 {
-        height: 155px;
+        height: 225px;
     }
     .section03 .img {
         background-size: cover;
@@ -715,7 +727,7 @@ section {
     }
     .section06 .text > div.img_bg {
         background-size: cover;
-        height: 147px;
+        height: 234px;
     }
     .section-title {
         font-size: 28px;
