의료진 이미지 수정

--- a/src/main/webapp/css/clientFooter.css
+++ b/src/main/webapp/css/clientFooter.css
@@ -1,7 +1,7 @@
 .footer-info-container {
     background: #24201f;
     padding-top: 53px;
-    /* padding-bottom: 54px; */
+    padding-bottom: 54px;
 }
 
 .footer-info-container li {
