타이틀 글자 안 보이는 문제 수정

--- a/src/main/webapp/css/info/staff.css
+++ b/src/main/webapp/css/info/staff.css
@@ -321,7 +321,7 @@ p + .dec-title {
         padding: 0 20px;
         box-sizing: border-box;
     }
-    .tab-contents .text .max-layout-width {
+    .tab-contents .text >div {
         padding: 0 30px;
         position: relative;
         z-index: 11;
