--- a/src/main/webapp/css/clientCommon.css
+++ b/src/main/webapp/css/clientCommon.css
@@ -686,6 +686,7 @@ section.board-link ul li {
     }
     table .table-middle {
         width: 14%;
+        padding: 26px 0;
     }
     table .table-left, table .table-right {
         width: 43%;
@@ -789,7 +790,7 @@ section.board-link ul li {
     section.list-content .image_box_left {
         width: 93%;
         height: 294px;
-        top: 310px;
+        top: 275px;
         left: 3.5%;
     }
 }
@@ -828,6 +829,8 @@ section.board-link ul li {
     }
     section.section-quotes-title-right .section-text:before {
         left: 30px;
+        top: -55px;
+        height: 40px;
     }
     section.section-quotes-title-right .max-layout-width .text > div:before {
         left: 30px;
@@ -838,6 +841,7 @@ section.board-link ul li {
     section.section-quotes-title-right .section-title {
         padding-left: 130px;
         padding-top: 66px;
+        margin-bottom: 65px;
     }
     section.section-quotes-title-right .image_box_right {
         width: 100%;
@@ -995,12 +999,14 @@ section.board-link ul li {
     }
     .table .table-left,.table .table-right {
         font-size: 13px;
+        line-height: 1.4;
     }
     section.table .table-middle {
         font-size: 15px;
     }
     .section-text {
         font-size: 14px;
+        margin-bottom: 26px;
     }
     .board-link .section-title {
         font-size: 28px;
@@ -1139,6 +1145,7 @@ section.board-link ul li {
 }
 
 @media screen and (max-width: 414px) {
+
     .section05 .max-layout-width .text > div {
         padding-right: 0px;
     }
@@ -1150,7 +1157,7 @@ section.board-link ul li {
     }
 
     section.section-top-title-right-two {
-        padding-bottom: 150px;
+        padding-bottom: 118px;
     }
 
     section.section-top-title-right-two .img {
@@ -1222,7 +1229,7 @@ section.board-link ul li {
         padding-bottom: 39px;
     }
     section.section-quotes-title-right .bg {
-        bottom: -25px;
+        bottom: -38px;
         height: 260px;
     }
 }
