--- a/src/main/webapp/css/implant/ondayImplants.css
+++ b/src/main/webapp/css/implant/ondayImplants.css
@@ -604,11 +604,17 @@ section.board-link {
 
 @media screen and (max-width: 1300px) {
 
-    .section02 .arrow p:first-child {
+.section02 .arrow p:first-child:before {
     background: url(../../images/sub/implant/oneday/oneday_arrow01.png) no-repeat center;
-    border-bottom: 1px solid #acacac;
-}
+    position: absolute;
+    width: 36px;
+    height: 40px;
+    content: '';
+    left: 40px;
+    background-size: contain;
+    }
 
+    
     .section02 .section-title, .section02 .section-text {
         line-height: 1.3;
         word-break: keep-all;
@@ -666,7 +672,7 @@ section.board-link {
 }
 
     .section03 {
-    margin-top: 60px;
+    margin-top: 67px;
     }
 
     .section02 .oneday li:first-child, .section02 .basic li:first-child {
@@ -778,7 +784,7 @@ section.board-link {
         word-break: keep-all;
     }
     .section04 {
-        margin-top: 80px;
+        margin-top: 87px;
     }
     .section02 .step {
         margin-top: 0px;
